<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="de.thelp1987.noteapp.activities.AddNoteActivity"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <TextView
            android:text="@string/note_title_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/titleHeader"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/note_textfieldContent_title"
            android:ems="10"
            android:id="@+id/noteTitleText"/>
    <TextView
            android:text="@string/note_title_textfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/noteHeader"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/noteContentText" android:layout_weight="1"
            android:text="@string/note_textfieldContent_content"/>
    <Button
            android:text="@string/note_buttonTitle_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnSave"/>

</LinearLayout>
